metadata/force-app/main/default/objects/Cumulative_MRR_Snapshot__c/Cumulative_MRR_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Cumulative MRR Snapshot</label>
    <nameField>
        <displayFormat>MRR-{0000}</displayFormat>
        <label>Cumulative MRR Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cumulative MRR Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>