metadata/force-app/main/default/objects/Cumulative_MRR_Snapshot__c/fields/Churn__c.field-meta.xml
<CustomField>
    <fullName>Churn__c</fullName>
    <label>Churn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>