metadata/force-app/main/default/objects/Cumulative_MRR_Snapshot__c/fields/Count_Churn__c.field-meta.xml
<CustomField>
    <fullName>Count_Churn__c</fullName>
    <label>Count Churn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>