metadata/force-app/main/default/objects/Cumulative_MRR_Snapshot__c/fields/Count_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Count_Expansion__c</fullName>
    <label>Count Expansion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>