metadata/force-app/main/default/objects/Cumulative_MRR_Snapshot__c/fields/Count_New_MRR__c.field-meta.xml
<CustomField>
    <fullName>Count_New_MRR__c</fullName>
    <label>Count New MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>