metadata/force-app/main/default/objects/Cumulative_MRR_Snapshot__c/fields/Expansion__c.field-meta.xml
<CustomField>
    <fullName>Expansion__c</fullName>
    <label>Expansion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>