metadata/force-app/main/default/objects/Cumulative_MRR_Snapshot__c/fields/New_MRR__c.field-meta.xml
<CustomField>
    <fullName>New_MRR__c</fullName>
    <label>New MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>