metadata/force-app/main/default/objects/Cumulative_MRR_Snapshot__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <label>Sales Office</label>
    <length>25</length>
    <type>Text</type>
</CustomField>